[package]
name = "monster-tower"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 2

[dependencies]
bevy = { version = "0.12.1", features = ["bevy_asset", "bevy_audio", "vorbis", "default_font"] }
bevy_common_assets = { version = "0.9.0", features = ["yaml"] }
rand = "0.8.5"
serde = "1.0.196"
serde_yaml = "0.9.31"
